--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,11 @@
             userInput.value = "";
             sendButton.disabled = false;
         }
+        async function clearChat() {
+            const response = await fetch("/clear_chat", {
+                method: "POST",
+            });
+        }
         
         function speak(text) {
             const synth = window.speechSynthesis;
@@ -114,6 +119,7 @@
                         <input type="text" id="userInput" class="form-control" placeholder="Type your message here" />
                         <button id="sendButton" class="btn btn-primary" type="button" onclick="sendMessage()">Send</button>
                         <button id="muteButton" class="btn btn-secondary" type="button" onclick="toggleMute()">Mute</button>
+                        <button class="btn btn-warning" type="button" onclick="clearChat()">Clear Chat</button>
                     </div>
                     <div id="chatLog" class="border rounded p-3 mb-3"></div>
                     <button class="btn btn-danger" type="button" onclick="logout()">Logout</button>
