--- a/templates/index.html
+++ b/templates/index.html
@@ -77,6 +77,7 @@
             sendButton.disabled = false;
         }
         async function clearChat() {
+            document.getElementById("chatLog").innerHTML = "";
             const response = await fetch("/clear_chat", {
                 method: "POST",
             });
