register works, buttons work, small issue with error codes

--- a/templates/index.html
+++ b/templates/index.html
@@ -123,6 +123,12 @@
                 }
             });
         }
+
+        function showLoginForm() {
+            document.getElementById("loginContainer").style.display = "block";
+            document.getElementById("registerContainer").style.display = "none";
+        }
+        
     </script>
 </head>
 <body>
