everything works, final version

--- a/templates/index.html
+++ b/templates/index.html
@@ -137,7 +137,7 @@
             <div class="card-body">
                 <div id="loginContainer">
                     <h1 class="card-title text-center mb-4">Login</h1>
-                    <div id="loginError" class="alert alert-danger">Invalid username or password</div>
+                    <div id="loginError" class="alert alert-danger" style="display: none;">Invalid username or password</div>
                     <div class="input-group mb-3">
                         <input type="text" id="username" class="form-control" placeholder="Username" />
                     </div>
